--- a/AZDORestApiExplorer.Git/Presentation/Views/CommitMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/CommitMain.xaml
@@ -33,7 +33,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <!--<RowDefinition Height="*" />-->
         </Grid.RowDefinitions>
 
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
@@ -51,7 +51,13 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-            <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="commitId" />
+            <dxg:GridColumn FieldName="author" />
+            <dxg:GridColumn FieldName="committer" />
+            <dxg:GridColumn FieldName="comment" />
+            <dxg:GridColumn FieldName="changeCounts" />
+            <dxg:GridColumn FieldName="remoteUrl" />
+            <dxg:GridColumn FieldName="commentTruncated" />
         </dxg:GridControl>
 
         <dxe:TextEdit Grid.Row="2"
