--- a/AZDORestApiExplorer.Git/Presentation/Views/ItemMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/ItemMain.xaml
@@ -33,7 +33,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <!--<RowDefinition Height="*" />-->
         </Grid.RowDefinitions>
 
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
@@ -51,7 +51,11 @@
                     ScrollViewer.CanContentScroll="True"
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
-            <dxg:GridColumn FieldName="name" />
+            <dxg:GridColumn FieldName="objectId" />
+            <dxg:GridColumn FieldName="gitObjectType" />
+            <dxg:GridColumn FieldName="commitId" />
+            <dxg:GridColumn FieldName="path" />
+            <dxg:GridColumn FieldName="isFolder" />
         </dxg:GridControl>
 
         <dxe:TextEdit Grid.Row="2"
