--- a/AZDORestApiExplorer/Resources/Xaml/Display_StylesAndTemplates.xaml
+++ b/AZDORestApiExplorer/Resources/Xaml/Display_StylesAndTemplates.xaml
@@ -25,6 +25,7 @@
     <SolidColorBrush x:Key="ProjectColor" Color="LightBlue" />
     <SolidColorBrush x:Key="TeamColor" Color="LightSalmon" />
     <SolidColorBrush x:Key="RepositoryColor" Color="#FFFF6400" />
+    <SolidColorBrush x:Key="CommitColor" Color="#FFB64700" />
     <SolidColorBrush x:Key="WorkItemTypeColor" Color="#FFA68ADE" />
 
     <Style x:Key="OutlineBorder" TargetType="Border">
