--- a/AZDORestApiExplorer.Git/Presentation/Views/MergeMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/MergeMain.xaml
@@ -23,7 +23,12 @@
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
 >
-
+    <d:DesignerProperties.DesignStyle>
+        <Style TargetType="UserControl">
+            <Setter Property="Background" Value="White" />
+        </Style>
+    </d:DesignerProperties.DesignStyle>
+    
     <UserControl.Resources>
 
     </UserControl.Resources>
@@ -33,7 +38,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <!--<RowDefinition Height="*" />-->
         </Grid.RowDefinitions>
 
         <Border Style="{StaticResource CountBorder}" Grid.Row="0">
