--- a/AZDORestApiExplorer.Git/Presentation/Views/PushMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PushMain.xaml
@@ -23,7 +23,12 @@
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
 >
-
+    <d:DesignerProperties.DesignStyle>
+        <Style TargetType="UserControl">
+            <Setter Property="Background" Value="White" />
+        </Style>
+    </d:DesignerProperties.DesignStyle>
+    
     <UserControl.Resources>
 
     </UserControl.Resources>
