--- a/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemRelationTypeMain.xaml
+++ b/AZDORestApiExplorer.WorkItemTracking/Presentation/Views/WorkItemRelationTypeMain.xaml
@@ -18,14 +18,17 @@
     
     xmlns:views="clr-namespace:AZDORestApiExplorer.WorkItemTracking.Presentation.Views"
     xmlns:viewModels="clr-namespace:AZDORestApiExplorer.WorkItemTracking.Presentation.ViewModels"
-xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
+    xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
     
-
     prism:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800"
 >
-
+    <d:DesignerProperties.DesignStyle>
+        <Style TargetType="UserControl">
+            <Setter Property="Background" Value="White" />
+        </Style>
+    </d:DesignerProperties.DesignStyle>
     <UserControl.Resources>
 
     </UserControl.Resources>
