--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestMain.xaml
@@ -38,7 +38,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
-            <!--<RowDefinition Height="*" />-->
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <Border Style="{StaticResource CountBorder}" Grid.Row="0" HorizontalAlignment="Left">
@@ -57,6 +57,12 @@
                 <Button Content=".docx" Click="ExportToWord_Click" Height="20" Width="45"/>
                 <Button Content=".html" Click="ExportToHtml_Click" Height="20" Width="35"/>
                 <Button Content=".pdf" Click="ExportToPdf" Height="20" Width="35"/>
+                <Button Content="Show"
+                            Command="{Binding ShowCommand}"
+                            CommandParameter="hello showd" />                
+                <Button Content="ShowDialog"
+                            Command="{Binding ShowDialogCommand}"
+                            CommandParameter="hello showdialog" />
             </StackPanel>
 
         </StackPanel>
@@ -82,6 +88,7 @@
             Text="{Binding PullRequests.SelectedItem.url}"
             TextWrapping="Wrap"  VerticalScrollBarVisibility="Auto"/>
 
+        <TextBlock Text="{Binding Message}" Grid.Row="3"/>
         <!--<Grid Grid.Row="3">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
